<resources>
    <string name="app_name">Golf Club</string>
    <string name="todo">TODO</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_clicking_register_you_agree_to">By clicking register you agree to</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_account">Don\'t have account?</string>


</resources>
