<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:textSize="18sp"
        android:fontFamily="@font/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_rounded"
        android:drawableStart="@drawable/username"
        android:drawablePadding="15dp"
        android:fontFamily="@font/regular"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:textColor="#000"
        android:textColorHint="#B4B4B4"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_rounded"
        android:drawableStart="@drawable/password"
        android:drawablePadding="15dp"
        android:fontFamily="@font/regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:textColor="#000"
        android:textColorHint="#B4B4B4"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_rounded"
        android:drawableStart="@drawable/password"
        android:drawablePadding="15dp"
        android:fontFamily="@font/regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:textColor="#000"
        android:textColorHint="#B4B4B4"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        tools:ignore="RtlHardcoded">
        <TextView
            android:textSize="12sp"
            android:fontFamily="@font/lightitalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_clicking_register_you_agree_to"/>
        <TextView

            android:textSize="12sp"
            android:id="@+id/textTerms"
            android:textStyle="bold"
            android:fontFamily="@font/lightitalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"/>
    </LinearLayout>


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="#ffff"
        android:text="@string/register"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"/>
        <TextView
            android:id="@+id/textLogin"
            android:textStyle="bold"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>